fix: add isvisible prop on base overlay component

--- a/editor-components/content/content10/content10.module.scss
+++ b/editor-components/content/content10/content10.module.scss
@@ -145,6 +145,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          z-index: 2;
 
           .play-container {
             position: relative;
